--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,12 @@
 {%extends "blog/base.html"%}
 {%block content%}
+{%if messages%}
+    {%for message in messages %}
+        <div class="alert alert-{{message.tags}}">
+            {{message}}
+        </div>
+    {%endfor%}
+{%endif%}
     <h1>Home</h1>
     {% for post in posts%}
         <a href="{%url 'blog-about'%}">{{post.title}}</a>
